feat(deployment): adds manual deployment trigger
